# comparison-of-sorting-algorithms

./: CMakeLists.txt  main.cpp
Array/: array.cpp  array.h
Menu/: measurement.cpp  measurement.h  menu.cpp  menu.h  test.cpp  test.h
SortingAlgorithms/: SortingAlgorithms.cpp  SortingAlgorithms.h
